# tests-Lab04

./: .gitignore  Actor.h  CMakeLists.txt  Component.h  Game.cpp  Game.h  Main.cpp  Math.cpp  Math.h  README.md  SpriteComponent.h  catch_reporter_github.hpp  copyFiles.sh
SDL2/: SDL.h
SDL3/: SDL.h  SDL_rect.h
